<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/txt_order_into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_6dp"
        android:paddingLeft="@dimen/_18sp"
        android:text="@string/elije_metodo_de_envio"
        android:textSize="@dimen/_18sp" >

    </TextView>

    <RadioGroup
        android:padding="@dimen/_18sp"
        android:layout_below="@id/txt_order_into"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/mismoDia"
            android:layout_width="wrap_content"
            android:onClick="onRadioBotonClick"
            android:text="@string/este_mismo_dia"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/nextDia"
            android:layout_width="wrap_content"
            android:onClick="onRadioBotonClick"
            android:text="@string/dia_seguente"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/pickUp"
            android:layout_width="wrap_content"
            android:onClick="onRadioBotonClick"
            android:text="@string/pick_up"
            android:layout_height="wrap_content"/>

    </RadioGroup>



</RelativeLayout>