<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DroidCafe">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/_15dp"
        android:paddingTop="@dimen/_50dp"
        android:text="Droid Desserts"
        android:textSize="34dp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutInterior"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgDonut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Donuts_describe"
                    android:padding="@dimen/padding_regular_10dp"
                    android:onClick="mostrarDonutsOrder"
                    android:src="@drawable/donut_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Donuts_describe"
                    android:padding="@dimen/_15dp" />
            </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imgIce"
                android:onClick="mostrarIceOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/Ice_describe"
                android:padding="@dimen/padding_regular_10dp"
                android:src="@drawable/icecream_circle" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ice_describe"
                android:padding="@dimen/_15dp" />
        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgFroyo"
                    android:onClick="mostrarFroyoOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/FroYo_describe"
                    android:padding="@dimen/padding_regular_10dp"
                    android:src="@drawable/froyo_circle" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FroYo_describe"
                    android:padding="@dimen/_15dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgNatilla"
                    android:onClick="mostrarNatillaOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/natilla_describe"
                    android:padding="@dimen/padding_regular_10dp"
                    android:src="@drawable/natilla" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/natilla_describe"
                    android:padding="@dimen/_15dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>